# dependent-checker

./: README.md  checker.cabal  dependent-checker.cabal  package.yaml  stack.yaml
examples/: notes  test.dc
src/: Check.hs  Context.hs  Eval.hs  Main.hs  Parse.hs  Terms.hs  Util.hs  Values.hs  Weaken.hs
