cabal-version:      2.4
name:               checker
version:            0.1.0.0


executable checker
    main-is:          Main.hs

    other-modules:
        Terms,
        Values,
        Eval,
        Weaken,
        Context,
        Check,
        Util

    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
    extensions:
        GADTs,
        DataKinds,
        KindSignatures,
        LambdaCase,
        StandaloneDeriving

    ghc-options:
        -fwarn-incomplete-patterns
